# net-robo

./: README.md
ArduinoUno_Sabertooth_Controller/: ArduinoUno_Sabertooth_Controller.ino  Client.py  UnoConstants.h  UnoRobotController.cpp  UnoRobotController.h  UnoRobotEncoder.cpp  UnoRobotEncoder.h
ArduinoUno_Sabertooth_Controller/Stop/: Stop.ino
ArduinoUno_Sabertooth_Controller/ver1/: ArduinoUno_Sabertooth_Controller.ino
Co-op/: arduino.ino  raspberrypi.py
Immersive/: Client.py
Immersive/node/: app.js  index.html
LynxRobot_EncoderDynamicPlot/: ArduinoSerialData.py  DynamicPlot.py
arduino/: rpi2ard.py
arduino/arduino_uno/Uno_Sabertooth_Controller/: NewRobot.ino  test.py
arduino/arduino_uno/simple_motor_control/: simple_motor_control.ino
arduino/dagu_wild_thumper/Wild_Thumper_Controller/: Constants.h  Wild_Thumper_Controller original slightly modified.ino  Wild_Thumper_Controller.ino
arduino/dagu_wild_thumper/Wild_Thumper_Diagnostic/: IOpins.h  Wild_Thumper_Diagnostic.ino
lynx/: lynx.py  video.sh
lynx/ArduinoUno_Sabertooth_Controller/: ArduinoUno_Sabertooth_Controller.ino
lynx/line_following/: lineFollowing.py  runthemotors.py  stopthemotors.py  testinput.py
lynx/trex_for_lynx/: trex_for_lynx.ino
node/: README.md  app.js
node/client/: index.html
node/client/js/: jwplayer.js
pi/: MainInterface.py  client.py  test.py  testwhatarduinowrites.py  webcam.sh
pi/ClientCode_ver1/: client.py  test.py
pi/ClientCode_ver1/Client_OldVer/: client.py
pi/ClientCode_ver2/: ClientClass.py
pi/ClientCode_ver5/Modules/: ClientClass.py
pi/ClientCode_ver6/Modules/: ClientClass.py
pi/ClientCode_ver7/: MainInterface.py
pi/ClientCode_ver8/: MainInterface.py
pi/Modules/: ClientClass.py  Consts_n_Flags.py
robotc/: test.c
rosserial_arduino_remote_robot/: CMakeLists.txt
rosserial_arduino_remote_robot/__BeforeChanges/: CMakeLists.txt  package.xml
rosserial_arduino_remote_robot/__BeforeChanges/include/trex_robot_control/: Constants.h  IOpins.h  RobotController.h
rosserial_arduino_remote_robot/__BeforeChanges/launch/: arduino_trex_control.launch
rosserial_arduino_remote_robot/__BeforeChanges/scripts/: pi_trex_publisher.py
rosserial_arduino_remote_robot/__BeforeChanges/src/TREXRobotControl/: RobotController.ino  TREXRobotControl.ino
rosserial_arduino_remote_robot/__scriptsAfterChange/: pi_trex_publisher.py
rosserial_arduino_remote_robot/include/trex_robot_control/: Constants.h  IOpins.h  RobotController.h
rosserial_arduino_remote_robot/launch/: arduino_trex_control.launch
rosserial_arduino_remote_robot/sketchbook/libraries/ros_lib/trex_robot_control/: TrexMotorCmds.h  TrexPowerMsg.h
rosserial_arduino_remote_robot/src/TREXRobotControl/: RobotController.ino  TREXRobotControl.ino
rosserial_trex_robot_control/Thumber/: package.xml
rosserial_trex_robot_control/Thumber/OldVer/include/trex_robot_control/: Constants.h
rosserial_trex_robot_control/Thumber/OldVer/launch/: arduino_trex_control.launch
rosserial_trex_robot_control/Thumber/msg/: TrexRobotData.msg
rosserial_trex_robot_control/Thumber/scripts/: pi_trex_Pwr_subscriber.py
rosserial_trex_robot_control/Thumber/src/: pi_trex_accel_subscriber.cpp  pi_trex_irange_subscriber.cpp  pi_trex_irange_subscriber.cpp%5C  pi_trex_pwr_subscriber.cpp  pi_trex_ultrasonic_subscriber.cpp
rosserial_trex_robot_control/Thumper_Trex_ROS_ver2/: CMakeLists.txt
rosserial_trex_robot_control/Thumper_Trex_ROS_ver2/OldVer/: CMakeLists.txt
rosserial_trex_robot_control/Thumper_Trex_ROS_ver2/OldVer/include/trex_robot_control/: IOpins.h
rosserial_trex_robot_control/Thumper_Trex_ROS_ver2/OldVer/src/TREXRobotControl/: RobotController.ino
rosserial_trex_robot_control/Thumper_Trex_ROS_ver2/include/trex_robot_control/: Constants.h  NewPing.h  RobotController.h
rosserial_trex_robot_control/Thumper_Trex_ROS_ver2/launch/: arduino_trex_control.launch
rosserial_trex_robot_control/Thumper_Trex_ROS_ver2/scripts/: pi_trex_Pwr_subscriber.py
rosserial_trex_robot_control/Thumper_Trex_ROS_ver2/src/: pi_trex_ultrasonic_subscriber.cpp
rosserial_trex_robot_control/Thumper_Trex_ROS_ver2/src/TREXRobotControl/: NewPing.ino  RobotController.ino  TREXRobotControl.ino
rosserial_trex_robot_control/launch/: arduino_trex_control.launch
rosserial_trex_robot_control/lynx/dagu_trex_atmega328p/: CMakeLists.txt  package.xml
rosserial_trex_robot_control/lynx/dagu_trex_atmega328p/include/dagu_trex_atmega328p/: Constants.h  IOpins.h  RobotController.h
rosserial_trex_robot_control/lynx/dagu_trex_atmega328p/launch/: atmega328p.launch
rosserial_trex_robot_control/lynx/dagu_trex_atmega328p/msg/: TrexRobotData.msg  TrexServoMotorCmds.msg
rosserial_trex_robot_control/lynx/dagu_trex_atmega328p/scripts/: pi_trex_EncodersPlot_subscriber.py  pi_trex_Pwr_subscriber.py  pi_trex_RobLoc_subscriber.py  pi_trex_Velocity_subscriber.py  pi_trex_publisher.py
rosserial_trex_robot_control/lynx/dagu_trex_atmega328p/src/: pi_trex_accel_subscriber.cpp  pi_trex_encoders_subscriber.cpp  pi_trex_irange_subscriber.cpp  pi_trex_pwr_subscriber.cpp  pi_trex_pwr_subscriber.cpp%5C  pi_trex_rob_loc_subscriber.cpp  pi_trex_vel_subscriber.cpp
rosserial_trex_robot_control/lynx/dagu_trex_atmega328p/src/TREXRobotControl/: RobotController.ino  TREXRobotControl.ino
rosserial_trex_robot_control/msg/: TrexMotorCmds.msg  TrexPowerMsg.msg
rosserial_trex_robot_control/scripts/: pi_trex_publisher.py
scripts/: PCtoPI.py  Thumbs.db  avdec_h264  build_gstreamer.sh  build_gstreamer_new.sh  build_gstreamer_paths.sh  camera.sh  commands.txt  configure  driver.sh  gstreamer.sh  h264parse  nginx.conf  rtmpsink  test.py  uart.py  uvch  v4l2src  webcam.sh  wifi.sh  wpa_supplicant.conf
scripts/Raspberry Pi Backup/: Client.py  Client1.py  advancedclient.py  camera.sh  clientnosocket.py  encode.sh  gstreamer.sh  modClient.py  testfirmware.py  webcam.sh
thumper/: thumper.py  video.sh
thumper/TRex/: Accelerometer.ino  TRex.ino
thumper/TRex (No ROS)/: TRex.ino
thumper/Wild_Thumper_Controller/: Controller.cpp  Controller.h  keywords.txt
(+20 files in other folders)
