<?xml version="1.0"?>
<package>
  <name>trex_robot_control</name>
  <version>0.0.0</version>
  <description>The trex_robot_control package</description>

  <maintainer email="ska61@sfu.ca">Soheil Keshmiri</maintainer>
  <license>BSD</license>

  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rosserial_arduino</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosserial_arduino</run_depend>
  <run_depend>std_msgs</run_depend>


  <export>
  </export>
</package>
